#
# Targets to build
#

#.SILENT:

check_PROGRAMS		= tc1796.bin \
			  tc1796MemoryLayout1.bin tc1796MemoryLayout2.bin \
			  tc179xSiliconBug105.bin \
			  tc1796SiliconBug013.bin tc1796SiliconBug048.bin \
			  tc1796SiliconBug060.bin tc1796SiliconBug065.bin \
			  tc1796SiliconBug069.bin tc1796SiliconBug070.bin \
			  tc1796SiliconBug071.bin tc1796SiliconBug072.bin \
			  tc1796SiliconBug081.bin tc1796SiliconBug081_1.bin \
			  tc1796SiliconBug082.bin tc1796SiliconBug083.bin \
			  tc1796SiliconBug094.bin tc1796SiliconBug095.bin \
			  tc1796SiliconBug096.bin \
			  tc1797.bin \
			  tcAReg1.bin \
			  tcAddressingModeParameter1.bin \
			  tcAsmParser1.bin tcAsmParser2.bin tcAsmParser3.bin \
			  tcAsmParser4.bin tcAsmParser5.bin tcAsmParser6.bin \
			  tcAsmParser7.bin \
			  tcBasicBlock1.bin \
			  tcBitABS01.bin tcBitADD01.bin tcBitAND01.bin \
			  tcBitBMERGE01.bin tcBitCADD01.bin tcBitCLO01.bin \
			  tcBitCMOV01.bin tcBitCMPF01.bin tcBitCSUB01.bin \
			  tcBitDEXTR01.bin tcBitDV01.bin tcBitEQ01.bin \
			  tcBitEXTR01.bin tcBitGE01.bin tcBitIMASK01.bin \
			  tcBitINS01.bin tcBitIXMAX01.bin tcBitJNE01.bin \
			  tcBitLD01.bin tcBitLOOP01.bin tcBitLT01.bin \
			  tcBitMADD01.bin tcBitMAX01.bin tcBitMOV01.bin \
			  tcBitNAND01.bin tcBitNE01.bin tcBitNOR01.bin \
			  tcBitNOT01.bin tcBitOR01.bin tcBitPARITY01.bin \
			  tcBitRSUB01.bin tcBitSAT01.bin tcBitSEL01.bin \
			  tcBitSH01.bin tcBitST01.bin tcBitSUB01.bin \
			  tcBitSWAP01.bin tcBitXOR01.bin \
			  tcCompilationUnit1.bin \
			  tcConst1Unsigned1.bin tcConst1Unsigned2.bin \
			  tcConst2Unsigned1.bin tcConst2Unsigned2.bin \
			  tcConst3Unsigned1.bin tcConst3Unsigned2.bin \
			  tcConst4Signed1.bin tcConst4Signed2.bin \
			  tcConst4Signed3.bin \
			  tcConst4Unsigned1.bin tcConst4Unsigned2.bin \
			  tcConst5Unsigned1.bin tcConst5Unsigned2.bin \
			  tcConst8Unsigned1.bin tcConst8Unsigned2.bin \
			  tcConst9Signed1.bin  tcConst9Signed2.bin \
			  tcConst9Signed3.bin \
			  tcConst9Unsigned1.bin tcConst9Unsigned2.bin \
			  tcConst10Signed1.bin  tcConst10Signed2.bin \
			  tcConst10Signed3.bin \
			  tcConst10Unsigned1.bin tcConst10Unsigned2.bin \
			  tcConst10Unsigned3.bin \
			  tcConst16Signed1.bin  tcConst16Signed2.bin \
			  tcConst16Signed3.bin \
			  tcConst16Unsigned1.bin tcConst16Unsigned2.bin \
			  tcConst18Unsigned1.bin tcConst18Unsigned2.bin \
			  tcConst18Unsigned3.bin tcConst18Unsigned4.bin \
			  tcConst18Unsigned5.bin tcConst18Unsigned6.bin \
			  tcConst18Unsigned7.bin tcConst18Unsigned8.bin \
			  tcConst18Unsigned9.bin \
			  tcDReg1.bin \
			  tcEReg1.bin tcEReg2.bin tcEReg3.bin tcEReg4.bin \
			  tcFunction1.bin tcFunction2.bin tcFunction3.bin \
			  tcFunction4.bin tcFunction5.bin tcFunction6.bin \
			  tcOperations1.bin tcOperations2.bin \
			  tcPReg1.bin \
			  tcPhRegs1.bin \
			  tcUnusedVRegs1.bin \
			  tcVirtualRegister1.bin

failscripts		= tc1796SiliconBug081_1.sh \
			  tcAsmParser3.sh tcAsmParser4.sh tcAsmParser5.sh \
			  tcAsmParser6.sh tcAsmParser7.sh \
			  tcConst1Unsigned2.sh \
			  tcConst2Unsigned2.sh \
			  tcConst3Unsigned2.sh \
			  tcConst4Signed2.sh tcConst4Signed3.sh \
			  tcConst4Unsigned2.sh \
			  tcConst5Unsigned2.sh \
			  tcConst8Unsigned2.sh \
			  tcConst9Signed2.sh tcConst9Signed3.sh \
			  tcConst10Signed2.sh tcConst10Signed3.sh \
			  tcConst10Unsigned2.sh tcConst10Unsigned3.sh \
			  tcConst9Unsigned2.sh \
			  tcConst16Unsigned2.sh \
			  tcConst18Unsigned2.sh tcConst18Unsigned3.sh \
			  tcConst18Unsigned4.sh tcConst18Unsigned5.sh \
			  tcConst18Unsigned6.sh tcConst18Unsigned7.sh \
			  tcConst18Unsigned8.sh tcConst18Unsigned9.sh \
			  tcConst16Signed2.sh tcConst16Signed3.sh \
			  tcEReg2.sh tcEReg3.sh tcEReg4.sh \
			  tcFunction1.sh tcFunction2.sh

passscripts		= tc1796.sh \
			  tc1796MemoryLayout1.sh \
			  tc179xSiliconBug105.sh \
			  tc1796SiliconBug013.sh tc1796SiliconBug048.sh \
			  tc1796SiliconBug060.sh tc1796SiliconBug065.sh \
			  tc1796SiliconBug069.sh tc1796SiliconBug070.sh \
			  tc1796SiliconBug071.sh tc1796SiliconBug072.sh \
			  tc1796SiliconBug081.sh tc1796SiliconBug082.sh \
			  tc1796SiliconBug083.sh tc1796SiliconBug094.sh \
			  tc1796SiliconBug095.sh tc1796SiliconBug096.sh \
			  tc1797.sh \
			  tcAReg1.sh \
			  tcAddressingModeParameter1.sh \
			  tcAsmParser1.sh tcAsmParser2.sh \
			  tcBitABS01.sh tcBitADD01.sh tcBitAND01.sh \
			  tcBitBMERGE01.sh tcBitCADD01.sh tcBitCLO01.sh \
			  tcBitCMOV01.sh tcBitCMPF01.sh tcBitCSUB01.sh \
			  tcBitDEXTR01.sh tcBitDV01.sh tcBitEQ01.sh \
			  tcBitEXTR01.sh tcBitGE01.sh tcBitIMASK01.sh \
			  tcBitINS01.sh tcBitIXMAX01.sh tcBitJNE01.sh \
			  tcBitLD01.sh tcBitLOOP01.sh tcBitLT01.sh \
			  tcBitMADD01.sh tcBitMAX01.sh tcBitMOV01.sh \
			  tcBitNAND01.sh tcBitNE01.sh tcBitNOR01.sh \
			  tcBitNOT01.sh tcBitOR01.sh tcBitPARITY01.sh \
			  tcBitRSUB01.sh tcBitSAT01.sh tcBitSEL01.sh \
			  tcBitSH01.sh tcBitST01.sh tcBitSUB01.sh \
			  tcBitSWAP01.sh tcBitXOR01.sh \
			  tcConst1Unsigned1.sh \
			  tcConst2Unsigned1.sh \
			  tcConst3Unsigned1.sh \
			  tcConst4Signed1.sh \
			  tcConst4Unsigned1.sh \
			  tcConst5Unsigned1.sh \
			  tcConst8Unsigned1.sh \
			  tcConst9Signed1.sh \
			  tcConst9Unsigned1.sh \
			  tcConst10Signed1.sh \
			  tcConst10Unsigned1.sh \
			  tcConst16Signed1.sh \
			  tcConst16Unsigned1.sh \
			  tcConst18Unsigned1.sh \
			  tcDReg1.sh \
			  tcEReg1.sh \
			  tcFunction4.sh tcFunction5.sh tcFunction6.sh \
			  tcOperations1.sh \
			  tcPReg1.sh \
			  tcPhRegs1.sh \
			  tcUnusedVRegs1.sh \
			  tcVirtualRegister1.sh

aspassscripts		= tc1796MemoryLayout2.sh \
			  tcBasicBlock1.sh \
			  tcCompilationUnit1.sh \
			  tcFunction3.sh \
			  tcOperations2.sh

check_SCRIPTS		= $(failscripts) $(passscripts)
check_ASSCRIPTS		= $(aspassscripts)

XFAIL_TESTS		= $(failscripts)
TESTS			= $(passscripts) $(aspassscripts) $(failscripts)


#
# Source files of the targets
#

CLEANFILES		= $(check_PROGRAMS) $(check_SCRIPTS) \
			  $(check_ASSCRIPTS) a.out core
AM_DEFAULT_SOURCE_EXT   = .cc


#
# Compiler and linker flags
#

LDADD			= $(top_builddir)/libwir.la \
			  @LIBUSEFUL_PREFIX@/libuseful/libuseful.la


#
# Specific rules
#

$(check_SCRIPTS): \
	%.sh: %.bin
	@echo "#!"$(BASH) > $@;
	@echo $(builddir)"/$< > /dev/null 2>&1" >> $@;
	@echo "exit ""$$""?" >> $@;
	@$(CHMOD) ugo+x $@

$(check_ASSCRIPTS): \
	%.sh: %.bin
	@echo "#!"$(BASH) > $@;
	@echo 'TMPFILE=/tmp/`basename $$0`.$$$$.log' >> $@;
	@echo $(builddir)"/$< > "'$$TMPFILE' >> $@;
	@echo 'ret=$$?' >> $@;
	@echo 'if [ $$ret != 0 ]; then' >> $@;
	@echo '  rm $$TMPFILE' >> $@;
	@echo '  exit $$ret' >> $@;
	@echo 'fi' >> $@;
	@echo $(TRIAS)' -mtc131 $$TMPFILE' >> $@;
	@echo 'ret=$$?' >> $@;
	@echo 'rm $$TMPFILE' >> $@;
	@echo 'exit $$ret' >> $@;
	@$(CHMOD) ugo+x $@
